# ofxstatement-spardabank

./: .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
src/ofxstatement_de_spardabank/: plugin.py
src/ofxstatement_spardabank/: __init__.py  plugin.py
tests/: test_spardabank.py  umsaetze-1234567-2024-02-13-12-00-00.csv
