[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ofxstatement-spardabank"
version = "0.0.1"
authors = [
  { name="Jan Holthuis", email="jan.holthuis@ruhr-uni-bochum.de" },
]
description = "Sparda-Bank plugin for ofxstatement"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Utilities",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
keywords = ["ofx", "banking", "statement", "plugin", "ofxstatement"]
dependencies = [
  "ofxstatement",
  "schwifty"
]

[project.urls]
Homepage = "https://github.com/Holzhaus/ofxstatement-spardabank/"

[project.entry-points."ofxstatement"]
spardabank = "ofxstatement_spardabank.plugin:SpardaBankPlugin"
